# SignalSense-AI

./: .gitignore  .pre-commit-config.yaml  EnterpriseDatabase.xlsx  README.md  agents-cli-manifest.yaml  deploy_apps.sh  generate_doc.py  lint_project.py  pyproject.toml  setup_gcp_and_project.sh  test_checkout_states.py  threat_model.md  verify_deployed_apps.py  verify_harness.py  walkthrough.md
enterprise_db/: enterprise.db  enterprise_backup.db  seed_db.py
member_ambassador_app/: db_helper.py  main.py  pyproject.toml  requirements.txt
operations_dashboard/: jwt_helper.py  main.py  pyproject.toml  rate_limiter.py  requirements.txt
signalsense_enterprise/: .dockerignore  GEMINI.md  Procfile  README.md  agents-cli-manifest.yaml  pyproject.toml  requirements.txt
signalsense_enterprise/deployment/terraform/single-project/: variables.tf
signalsense_enterprise/deployment/terraform/single-project/vars/: env.tfvars
signalsense_enterprise/signalsense_agent/: __init__.py  agent.py  agent_runtime_app.py  db_helper.py  fast_api_app.py
signalsense_enterprise/signalsense_agent/app_utils/: telemetry.py  typing.py
signalsense_enterprise/tests/: test_agent.py
signalsense_enterprise/tests/integration/: test_agent.py  test_agent_runtime_app.py
