[project]
name = "signalsense_enterprise"
version = "0.1.0"
description = "ADK agent for SignalSense Enterprise Backend"
authors = [
    {name = "Your Name", email = "your@email.com"},
]
dependencies = [
    "google-adk[gcp]>=2.3.0,<3.0.0",
    "opentelemetry-instrumentation-google-genai>=0.7b1",
    "gcsfs>=2026.6.0",
    "google-cloud-logging>=3.16.0",
    "fastapi",
    "uvicorn",
]
requires-python = ">=3.11,<3.13"

[dependency-groups]
dev = [
    "pytest>=9.0.2,<10.0.0",
    "pytest-asyncio>=1.0.0,<2.0.0",
    "nest-asyncio>=1.6.0,<2.0.0",
]

[project.optional-dependencies]
eval = [
    "google-adk[eval]>=2.3.0,<3.0.0",
    "google-cloud-aiplatform[evaluation]>=1.158.0",
]
lint = [
    "ruff>=0.4.6,<1.0.0",
    "ty>=0.0.1a0",
    "codespell>=2.2.0,<3.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "C",  # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP", # pyupgrade
    "RUF", # ruff specific rules
]
ignore = ["E501", "C901", "B006"]

[tool.ruff.lint.isort]
known-first-party = ["signalsense_agent"]

[tool.codespell]
ignore-words-list = "rouge"
skip = "./locust_env/*,uv.lock,.venv,./frontend,**/package-lock.json"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = "."
asyncio_default_fixture_loop_scope = "function"

[tool.hatch.build.targets.wheel]
packages = ["signalsense_agent"]
